--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ dependencies = [
   "uvicorn>=0.27",
   "jinja2>=3.1",
 ]
+optional-dependencies = {dev = ["pytest>=8.2", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.27", "ruff>=0.4.8"] }
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+addopts = "-q"
 
 [project.scripts]
 refinery = "s390x_wheel_refinery.cli:main"
