--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "fastapi>=0.110",
   "uvicorn>=0.27",
   "jinja2>=3.1",
+  "pyyaml>=6.0",
 ]
 optional-dependencies = {dev = ["pytest>=8.2", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.27", "ruff>=0.4.8", "pyyaml>=6.0"] }
 [tool.pytest.ini_options]
