--- a/ui/package.json
+++ b/ui/package.json
@@ -11,17 +11,20 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "react-router-dom": "^6.26.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.22",
     "jsdom": "^25.0.1",
-    "vitest": "^2.1.1",
-    "vite": "^5.4.8"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.1"
   }
 }
