--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           if ls docs/diagrams/*.mmd >/dev/null 2>&1; then
             for f in docs/diagrams/*.mmd; do
               echo "Checking $f"
-              npx -y @mermaid-js/mermaid-cli@10.9.0 -i "$f" -o /tmp/diagram.svg >/dev/null
+              npx -y @mermaid-js/mermaid-cli@10.9.0 -i "$f" -o /tmp/diagram.svg --puppeteerConfigFile docs/diagrams/puppeteer-config.cjs >/dev/null
             done
           else
             echo "No mermaid files found"
