Ship refinery build entrypoint in builder images and harden runner

--- a/docker-compose.control-plane.yml
+++ b/docker-compose.control-plane.yml
@@ -76,7 +76,7 @@ services:
       QUEUE_BACKEND: redis
       REDIS_URL: redis://redis:6379
       PODMAN_BIN: podman
-      WORKER_RUN_CMD: refinery --input /input --output /output --cache /cache --python ${PYTHON_TAG:-3.11} --platform-tag ${PLATFORM_TAG:-manylinux2014_s390x} --only ${JOB_NAME:-}${JOB_VERSION:+==${JOB_VERSION:-}} --jobs 1
+      WORKER_RUN_CMD: refinery-build
     volumes:
       - ./input:/input:ro
       - ./output:/output
