--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,9 @@ authors = [{ name = "s390x Wheel Refinery Maintainers" }]
 dependencies = [
   "packaging>=24.0",
   "build>=1.2.1",
-  "fastapi>=0.110",
-  "uvicorn>=0.27",
-  "jinja2>=3.1",
   "pyyaml>=6.0",
 ]
-optional-dependencies = {dev = ["pytest>=8.2", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.27", "ruff>=0.4.8", "pyyaml>=6.0"] }
+optional-dependencies = {dev = ["pytest>=8.2", "ruff>=0.4.8", "pyyaml>=6.0"] }
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 addopts = "-q"
