--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Refine arbitrary Python wheels into s390x-compatible wheels with caching and a simple CLI."
 readme = "README.md"
 requires-python = ">=3.11"
-license = { text = "MIT" }
+license = { file = "LICENSE" }
 authors = [{ name = "s390x Wheel Refinery Maintainers" }]
 dependencies = [
   "packaging>=24.0",
