--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -103,6 +103,7 @@ services:
     build:
       context: .
       dockerfile: containers/go-worker/Containerfile
+    privileged: true
     environment:
       INPUT_DIR: /input
       OUTPUT_DIR: /output
@@ -125,6 +126,7 @@ services:
       - ./input:/input:ro
       - ./output:/output
       - ./cache:/cache
+      - podman-storage:/var/lib/containers
     depends_on:
       - control-plane
 
@@ -132,3 +134,4 @@ volumes:
   pgdata:
   zotdata:
   miniodata:
+  podman-storage:
