--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -34,7 +34,9 @@ services:
       retries: 5
 
   minio:
-    image: quay.io/minio/minio:latest
+    build:
+      context: .
+      dockerfile: containers/minio/Containerfile
     command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: minio
