chore: harden images and healthchecks for ui/zot/minio

--- a/containers/go-control-plane/Containerfile
+++ b/containers/go-control-plane/Containerfile
@@ -1,11 +1,14 @@
-# Build stage
-FROM golang:1.22 AS builder
+# Build stage: use UBI + distro Go to avoid Docker Hub pulls and target s390x.
+FROM registry.access.redhat.com/ubi9/ubi:9.3 AS builder
+RUN dnf -y update && \
+    dnf -y install golang git make gcc && \
+    dnf clean all
 WORKDIR /app
 COPY go-control-plane/ ./
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /go-control-plane ./cmd/api
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=s390x go build -trimpath -o /go-control-plane ./cmd/api
 
-# Runtime stage
-FROM gcr.io/distroless/base-debian12
+# Runtime stage: UBI minimal (s390x)
+FROM registry.access.redhat.com/ubi9/ubi-minimal:9.3
 COPY --from=builder /go-control-plane /usr/local/bin/control-plane
 EXPOSE 8080
 ENTRYPOINT ["/usr/local/bin/control-plane"]
