--- a/containers/minio/Containerfile
+++ b/containers/minio/Containerfile
@@ -11,7 +11,8 @@ RUN git clone https://github.com/minio/minio.git . && git checkout "$MINIO_TAG"
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=s390x go build -trimpath -o /minio .
 
 FROM registry.access.redhat.com/ubi9/ubi-minimal:9.3
-RUN microdnf -y update && microdnf -y install shadow-utils curl && microdnf clean all
+# curl-minimal ships in the base UBI; avoid installing full curl to prevent repo conflicts.
+RUN microdnf -y update && microdnf -y install shadow-utils && microdnf clean all
 RUN useradd -r -u 1000 minio && mkdir -p /data && chown -R minio:minio /data
 COPY --from=builder /minio /usr/local/bin/minio
 USER minio
