--- a/containers/ui/Containerfile
+++ b/containers/ui/Containerfile
@@ -14,6 +14,14 @@ RUN npm run build
 # Runtime: serve static assets with UBI9 nginx and custom config for SPA.
 FROM registry.access.redhat.com/ubi9/nginx-124:latest
 USER 0
+# Avoid host-provided RHEL repos that conflict with UBI content when building on subscribed hosts.
+RUN rm -f /etc/yum.repos.d/redhat.repo && \
+    dnf -y --disablerepo='rhel-*' \
+        --enablerepo='ubi-9-baseos-rpms' \
+        --enablerepo='ubi-9-appstream-rpms' \
+        --setopt=install_weak_deps=0 \
+        install shadow-utils && \
+    dnf clean all
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY containers/ui/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 8080
