--- a/containers/ui/nginx.conf
+++ b/containers/ui/nginx.conf
@@ -13,12 +13,28 @@ http {
     sendfile      on;
     keepalive_timeout  65;
 
+    upstream control_plane {
+        server control-plane:8080;
+    }
+
     server {
         listen 8080;
         server_name _;
         root /usr/share/nginx/html;
         index index.html;
+
+        location /api/ {
+            proxy_pass http://control_plane;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # SPA-friendly: fall back to index.html for client-side routes.
-        try_files $uri $uri/ /index.html;
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
 }
