--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -11,6 +11,11 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U refinery -d refinery"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: registry.redhat.io/rhel9/redis-7
@@ -56,7 +61,8 @@ services:
       context: .
       dockerfile: containers/go-control-plane/Containerfile
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
       - redis
       - zot
       - minio
