--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -63,9 +63,12 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      - redis
-      - zot
-      - minio
+      redis:
+        condition: service_started
+      zot:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
     environment:
       HTTP_ADDR: ":8080"
       POSTGRES_DSN: postgres://refinery:refinery@postgres:5432/refinery?sslmode=disable
