--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -84,8 +84,11 @@ services:
       OBJECT_STORE_BUCKET: wheelhouse
       OBJECT_STORE_ACCESS_KEY: minio
       OBJECT_STORE_SECRET_KEY: minio123
+      INPUT_DIR: /input
     ports:
       - "8080:8080"
+    volumes:
+      - ./input:/input
 
   ui:
     build:
