--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -88,10 +88,13 @@ services:
       OBJECT_STORE_ACCESS_KEY: minio
       OBJECT_STORE_SECRET_KEY: minio123
       INPUT_DIR: /input
+      HINTS_DIR: /hints
+      HINTS_SEED: "1"
     ports:
       - "8080:8080"
     volumes:
       - ./input:/input
+      - ./hints:/hints:ro
 
   ui:
     build:
