--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -89,14 +89,13 @@ services:
       OBJECT_STORE_BUCKET: wheelhouse
       OBJECT_STORE_ACCESS_KEY: minio
       OBJECT_STORE_SECRET_KEY: minio123
-      INPUT_DIR: /input
+      INPUT_OBJECT_PREFIX: inputs
       HINTS_DIR: /hints
       HINTS_SEED: "1"
       CORS_ORIGINS: "http://localhost:3000,http://127.0.0.1:3000"
     ports:
       - "8080:8080"
     volumes:
-      - ./input:/input
       - ./hints:/hints:ro
 
   ui:
@@ -116,7 +115,6 @@ services:
       dockerfile: containers/go-worker/Containerfile
     privileged: true
     environment:
-      INPUT_DIR: /input
       OUTPUT_DIR: /output
       CACHE_DIR: /cache
       PYTHON_VERSION: "3.11"
@@ -140,7 +138,6 @@ services:
       OBJECT_STORE_ACCESS_KEY: minio
       OBJECT_STORE_SECRET_KEY: minio123
     volumes:
-      - ./input:/input:ro
       - ./output:/output
       - ./cache:/cache
       - podman-storage:/var/lib/containers
