--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -128,6 +128,7 @@ services:
       PLAN_LIST_URL: http://control-plane:8080/api/pending-inputs
       PLAN_POLL_INTERVAL_SEC: 10
       PLAN_POP_BATCH: 5
+      BUILD_POP_URL: http://control-plane:8080/api/build-queue/pop
       QUEUE_BACKEND: redis
       REDIS_URL: redis://redis:6379
       PODMAN_BIN: podman
