--- a/containers/ui/nginx.conf
+++ b/containers/ui/nginx.conf
@@ -23,6 +23,14 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        location = /index.html {
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" always;
+        }
+
+        location /assets/ {
+            add_header Cache-Control "public, max-age=31536000, immutable" always;
+        }
+
         location /api/ {
             proxy_pass http://control_plane;
             proxy_http_version 1.1;
